Fix slideup container covering arrow

--- a/www/css/stopwatch.css
+++ b/www/css/stopwatch.css
@@ -98,6 +98,7 @@
     width: 100%;
     background-color: lightgray;
     bottom: 0;
+    margin-bottom: 0 !important;
 }
 
 #stopwatchPage #landingPage .carousel_container {
@@ -157,6 +158,7 @@
     font-weight: bold;
     background-color: rgb(44, 44, 46);
     border-radius: 85%;
+    padding: 1% 1% 2% 1%;
 }
 
 #stopwatchPage #landingPage .arrow_left {
